[package]
name = "rapira_http"
version = "0.3.0"
edition = "2024"
rust-version = "1.97.1"
license = "MIT"
description = "Rapira HTTP front — a Pingora server plugin that streams requests through PHP"

[dependencies]
extension_api = { git = "https://github.com/rustatian/extensions_api.git", branch = "main" }
pingora = { version = "0.8", features = ["proxy"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
async-trait = "0.1"
anyhow = "1"
log = { version = "0.4", features = ["std"] }

[lints.clippy]
all = "warn"

[dev-dependencies]
divan = { version = "5.0.1", package = "codspeed-divan-compat" }

[[bench]]
name = "headers"
harness = false
